--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>User Profile Generator</title>
   </head>
-  <body class="bg-black bg-background bg-no-repeat bg-cover">
+  <body class="bg-black m-auto bg-background bg-no-repeat bg-cover">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
